Logo SVG embedded in HTML , replaced W/H with viewbox, some css added

--- a/style.css
+++ b/style.css
@@ -4,3 +4,13 @@ body {
     margin: 0;
 }
 
+#logo svg {
+    height: 25px;
+}
+
+#huddle-text {
+/*     height: 80%;
+    width: auto; */
+    fill: #f75050;
+}
+
