--- a/style.css
+++ b/style.css
@@ -34,8 +34,23 @@ header {
     cursor: pointer;
 }
 
+#get-started-button {
+    background-color: hsl(322, 100%, 66%);
+    font-size: .7em;
+    color: #fff;
+    /* text-shadow: 0 0 0 1px hsla(322, 100%, 66%, 0.3);       Use for hover */
+    padding: 10px 30px;
+    border: none;
+    /* border: solid 1px; */
+    border-radius: 4px;
+    border-color: hsl(322, 100%, 66%);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    /* box-shadow: 5px 5px 2px #d3d3d3;  */
+    cursor: pointer; 
+}
+
 main {
-    margin: 40px 25px;
+    /* margin: 40px 25px; */
 }
 
 h1 {
@@ -46,23 +61,56 @@ h1 {
 
 h2 {
     font-family: 'Poppins', sans-serif;
+    font-size: 1.2em;
 }
 
 p {
     font-family: 'Open Sans', sans-serif;
-    text-align: center;
     font-size: .8em;
 }
 
 #info_1 {
-    padding: 0 20px 50px;
+    padding: 0 45px 20px;
+}
+
+#info_1 p {
+    text-align: center;
+}
+
+#info_2 {
+    padding: 40px 25px;
+    background-color: #f6fbff;
+}
+
+#info_2 p {
+    padding-bottom: 25px;
+}
+
+#info_3 {
+    padding: 50px 0;
+    text-align: center;
 }
 
 #screen-mockups img {
+    padding: 40px 0 60px;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 100%;
+    width: 85%;
+    height: auto;
+}
+
+#your-users {
+    padding-top: 30px;
+    background-color: #f6fbff;
+}
+
+#your-users img {
+    padding: 40px 0;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 85%;
     height: auto;
 }
 
