--- a/style.css
+++ b/style.css
@@ -49,9 +49,9 @@ header {
     cursor: pointer; 
 }
 
-main {
-    /* margin: 40px 25px; */
-}
+/* main {
+    margin: 40px 25px;
+} */
 
 h1 {
     font-family: 'Poppins', sans-serif;
@@ -87,7 +87,7 @@ p {
 }
 
 #info_3 {
-    padding: 50px 0;
+    padding: 80px 0;
     text-align: center;
 }
 
@@ -114,22 +114,24 @@ p {
     height: auto;
 }
 
-/* .logo {
-    height: 25px;
+#footer-1 {
+    padding: 80px 25px;
+    color: #fff;
+    background-color: hsl(192, 100%, 9%); 
+}
+
+#footer-1 a {
+    color: #fff;
+}
+
+#footer-1 a:link {
+    text-decoration: none;
+}
+
+.footer-1-svg {
+    height: 30px;
     width: auto;
-} */
-
-
-/* #logo-size {
-    height: 20px;
-    width: auto;
-} */
-
-
-/* img {
-    width: 100%;
-    height: auto;
-} */
-
-
+    padding: 15px 0;
+}
+    
 
