--- a/style.css
+++ b/style.css
@@ -25,12 +25,12 @@ header {
     background-color: #fff;
     font-size: .7em;
     color: hsl(322, 100%, 66%);
-    /* text-shadow: 0 0 0 1px hsla(322, 100%, 66%, 0.3);       Use for hover */
+    text-shadow: 0 0 3px hsla(322, 100%, 66%, 0.1);
     padding: 5px 17px;
     border: solid 1px;
     border-radius: 4px;
     border-color: hsl(322, 100%, 66%);
-    box-shadow: 0 0 0 2px hsla(322, 100%, 66%, 0.1);
+    box-shadow: 0 0 0 3px hsla(322, 100%, 66%, 0.1);
     cursor: pointer;
 }
 
@@ -38,12 +38,12 @@ header {
     background-color: hsl(322, 100%, 66%);
     font-size: .7em;
     color: #fff;
-    padding: 10px 50px;
+    padding: 20px 70px;
     border: none;
     /* border: solid 1px; */
-    border-radius: 4px;
+    border-radius: 5px;
     /* border-color: hsl(322, 100%, 66%); */
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
     /* box-shadow: 5px 5px 2px #d3d3d3;  */
     cursor: pointer; 
 }
@@ -203,6 +203,16 @@ p {
     padding: 10px 0;
 }
 
+.attribution {
+    font-size: 11px;
+    text-align: center;
+}
+
+.attribution a {
+    color: hsl(228, 45%, 44%);
+}
+
+
 @media only screen and (max-width: 767px) {
     /* Hide 2nd button until desktop width */
     div#upper_get_started_button {
@@ -211,13 +221,33 @@ p {
 }
 
 @media only screen and (min-width: 768px) {
-    /* For desktop */
+    /*     **********     For desktop     **********     */
+
+    header {
+        padding: 50px 50px 100px;
+    }
+
     h1 {
-        font-size: 2em;
+        font-size: 2.4em;
+    }
+
+    h2 {
+        font-size: 1.5em;
     }
     
     p {
-        font-size: 1em;
+        font-size: 1.2em;
+    }
+
+    .logo img {
+        height: 30px;
+        width: auto;
+        padding-top: 3px;
+    }
+
+    #try-it-button {
+        font-size: .9em;
+        padding: 7px 20px;
     }
 
     #info_1 {
@@ -225,7 +255,11 @@ p {
     }
 
     #info_1 p {
-        padding: 0 10% 20px;
+        padding: 0 17% 20px;
+    }
+
+    #screen-mockups {
+        padding: 20px 0;
     }
 
     #screen-mockups img {
@@ -238,13 +272,15 @@ p {
     }
 
     .get-started-button {
-        font-size: .9em;
+        font-size: 1em;
+        padding: 20px 80px;
     }
 
     #info_2_flex {
         display: flex;
         flex-direction: row-reverse;
         align-items: center;
+        padding: 90px 30px 0;
     }
 
     #info_2_flex > div {
@@ -265,5 +301,38 @@ p {
         padding: 0 10px;
     }
 
+    #footer_flex {
+        display: flex;
+        box-sizing: border-box;
+        padding: 0 25px;
+        align-items: center;
+    }
+
+    #b1-form {
+        order: 4;
+        width: 30%;
+    }
+
+    #b2-icons_info {
+        width: 30%;
+    }
+
+    #b3-links1 {
+        width: 20%;
+        text-align: center;
+    }
+
+    #b4-links2 {
+        width: 20%;
+        text-align: center;
+    }
+
+    #email-input {
+        padding: 10px 30px 10px 10px;
+    }
+
+    #footer-2 {
+        background-image: url(images/bg-footer-desktop.png);
+    }
 
 }
