--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
+/*   TODO:
+        - add gradient to Get Started buttons
+        - tidy up code
+*/
+
 body {
     margin: 0;
 }
@@ -283,16 +288,22 @@ p {
         padding: 90px 30px 0;
     }
 
-    #info_2_flex > div {
+/*     #info_2_flex > div {
         width:50%;
-    }
+    } */
 
     #info_2 {
+        width: 45%;
         padding: 0 25px;
         background-color: #fff;
     }
 
+    #info_2 p {
+        font-size: 1em;
+    }
+
     #your-users {
+        width: 55%;
         background-color: #fff;
         padding: 0;
     }
@@ -308,27 +319,53 @@ p {
         align-items: center;
     }
 
+    #footer-1 {
+        font-size: .9em;
+        color: hsl(208, 11%, 55%);
+    }
+
+    #footer-1 a {
+        color: hsl(208, 11%, 55%);
+    }
+
     #b1-form {
         order: 4;
         width: 30%;
     }
 
     #b2-icons_info {
-        width: 30%;
+        width: 25%;
+        padding: 0 50px;
     }
 
     #b3-links1 {
         width: 20%;
-        text-align: center;
+        /* text-align: center; */
     }
+
+    #b3-links1 p {
+        padding-left: 40px;
+    }
+
+/*     #links1 {
+        padding: 10px;
+    } */
 
     #b4-links2 {
         width: 20%;
-        text-align: center;
+        /* text-align: center; */
+    }
+
+    #b4-links2 p {
+        padding-left: 20px;
     }
 
     #email-input {
         padding: 10px 30px 10px 10px;
+    }
+
+    #arrow-button {
+        padding: 12px;
     }
 
     #footer-2 {
